# CascadeUI

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  example.py  manager.py  mkdocs.yml  pyproject.toml  session.py  setup.py  types.py  view.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
cascadeui/: __init__.py  __main__.py  devtools.py  exceptions.py  setup.py  tracing.py  validation.py
components/: __init__.py  base.py  buttons.py  composition.py  inputs.py  patterns.py  wrappers.py
docs/: examples.md  index.md
examples/: counter.py  navigation.py  persistence.py  persistent_counter.py  persistent_dashboard.py  settings_menu.py  state_features.py  themed_form.py  ticket_system.py  undo_redo.py  v2_attachments.py  v2_battleship.py  v2_computed.py  v2_counter.py  v2_dashboard.py  v2_db_navigation.py  v2_form.py  v2_grids.py  v2_hello_world.py  v2_leaderboard.py  v2_library.py  v2_lobby.py  v2_pagination.py  v2_persistence.py  v2_settings.py  v2_tictactoe.py  v2_wizard.py
persistence/: serialization.py  storage.py
state/: __init__.py  actions.py  reducers.py  store.py  types.py
tests/: conftest.py  helpers.py  test_auto_defer.py  test_backends.py  test_backends_postgres.py  test_backends_raw_sql.py  test_batching.py  test_button_grid.py  test_components.py  test_computed.py  test_devtools.py  test_dynamic_persistent_button.py  test_emoji_grid.py  test_ephemeral_refresh.py  test_fetch.py  test_five_pillars.py  test_form_patterns.py  test_hooks.py  test_input_coercion.py  test_inputs.py  test_instance_limit.py  test_layout_pagination.py  test_layout_patterns.py  test_layout_persistent.py  test_layout_view.py  test_leaderboard_patterns.py  test_logging_middleware.py  test_menu_patterns.py  test_message_cleanup.py  test_middleware.py  test_nav_stack.py  test_nav_version.py  test_navigation.py  test_navigation_artifact_restore.py  test_owner_only.py  (+25 more)
(+118 files in other folders)
